Modernize code using Java 17 syntax